# focus-stack

./: CMakeLists.txt
py/: py_focusstack.cpp
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp
